correct button styling for better contrast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,10 +158,10 @@ body {
 .btn {
     font-size: large;
     font-weight: bold; 
-    background: #a87b32;
+    background: white;
     border-radius: 15px;
     padding: 10px;
-    color: #f5f5f5;
+    color: black;
     margin: 5px;
     cursor: pointer;
  }
